# Auth4Free

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  lib_tree.ini  test_no_look
.github/workflows/: ci.yml  release.yml
auth4free/: Cargo.toml
auth4free/src/: lib.rs
examples/: password_validation.rs  session_integration.rs  user_registration.rs  web_api_integration.rs
src/: lib.rs
src/auth/: middleware.rs  mod.rs  models.rs  service.rs
src/password_hasher/: constants.rs  hasher.rs  mod.rs
src/password_validation/: common.rs  errors.rs  mod.rs  scorer.rs  validator.rs
src/rate_limiter/: limiter.rs  mod.rs  models.rs  storage.rs
src/session/: manager.rs  mod.rs  models.rs  storage.rs
src/tests/: auth_tests.rs  token_generator_tests.rs  user_service_tests.rs
src/token_generator/: config.rs  generator.rs  mod.rs
src/user/: handlers.rs  mod.rs  models.rs
tests/: auth_tests.rs  password_validation_tests.rs  session_integration_tests.rs  token_generator_tests.rs  user_service_tests.rs
