[package]
name = "authlib"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.78"
jsonwebtoken = "10.3.0"
bcrypt = "0.19.0"
rand = "0.10.0"
toml = "0.9.8"
uuid = { version = "1.0.3", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }