[package]
name = "auth4free"
version = "0.2.0"  # Update version
edition = "2024"
authors = ["Felipe Carvajal Brown <fcarvajalbrown@gmail.com>"]
description = "A modern, secure authentication library for Rust applications with password validation, JWT tokens, bcrypt hashing, session management, and rate limiting."
documentation = "https://docs.rs/auth4free"
homepage = "https://github.com/fcarvajalbrown/auth4free"
repository = "https://github.com/fcarvajalbrown/auth4free"
readme = "README.md"
keywords = ["authentication", "security", "jwt", "password", "bcrypt", "rate-limiting", "session"]
categories = ["authentication", "web-programming", "asynchronous"]
license = "MIT"

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.78"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
bcrypt = "0.19.0"
rand = "0.8.0"
toml = "0.9.8"
uuid = { version = "1.0.3", features = ["v4", "serde"] }
tower = { version = "0.4", features = ["util"] }
tokio = { version = "1", features = ["sync", "time", "rt"] }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[[example]]
name = "password_validation"
path = "examples/password_validation.rs"

[[example]]
name = "user_registration"
path = "examples/user_registration.rs"

[[example]]
name = "web_api_integration"
path = "examples/web_api_integration.rs"

[[example]]
name = "session_integration"
path = "examples/session_integration.rs"